# Ferrish

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  temp  temp.rs
src/: main.rs
