[package]
name = "ferrish"
version = "0.1.0"
authors = ["0xViolette"]
edition = "2021"
description = "A minimal Unix shell written in Rust - built from scratch."
readme = "README.md"
repository = "https://github.com/0xViolette/Ferrish"
license = "MIT"
keywords = ["shell", "cli", "repl", "unix"]
categories = ["command-line-utilities"]

[dependencies]
is_executable = "1.0.6"
